Reorganize workspace test resources

--- a/src/Workspaces/CoreTestUtilities/WorkspacesTestUtilities.csproj
+++ b/src/Workspaces/CoreTestUtilities/WorkspacesTestUtilities.csproj
@@ -25,23 +25,6 @@
     <ProjectReference Include="..\Core\Portable\Workspaces.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_App.xaml.cs" />
-    <EmbeddedResource Include="Resources\CSharpProject_AssemblyInfo.cs" />
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpClass.cs" />
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpClass_WithConditionalAttributes.cs" />
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpConsole.cs" />
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpExternAlias.cs" />
-    <EmbeddedResource Include="Resources\CSharpProject_MainWindow.xaml.cs" />
-    <EmbeddedResource Include="Resources\OtherStuff_Foo.cs" />
-    <EmbeddedResource Include="Resources\key.snk" />
-    <EmbeddedResource Include="Resources\VisualBasicProject_Resources.resx_" />
-    <EmbeddedResource Include="Resources\VisualBasicProject_Settings.settings" />
-    <EmbeddedResource Include="Resources\Directory.Build.props" />
-    <EmbeddedResource Include="Resources\Directory.Build.targets" />
-    <EmbeddedResource Include="Resources\NetCoreApp2\NetCoreApp2.csproj" />
-    <EmbeddedResource Include="Resources\NetCoreApp2\Program.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -61,255 +44,9 @@
     <InternalsVisibleToTest Include="Roslyn.Services.UnitTests" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\CircularProjectReferences\CircularCSharpProject1.csproj" />
+    <EmbeddedResource Include="Resources\**\*.*" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\CircularProjectReferences\CircularCSharpProject2.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CircularProjectReferences\CircularSolution.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_App.xaml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_AllOptions.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_AnalyzerReference.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_AssemblyNameIsPath.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_AssemblyNameIsPath2.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_BadHintPath.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_BadLink.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_DuplicateFile.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_ExternAlias.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_ExternAlias2.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_ForEmittedOutput.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_ProjectReference.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_WithoutCSharpTargetsImported.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_WithoutPrefer32Bit.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_WithPrefer32Bit.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_WithXaml.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_DuplicatedGuidLibrary1.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_DuplicatedGuidLibrary2.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_DuplicatedGuidLibrary3.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_DuplicatedGuidLibrary4.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_DuplicatedGuidReferenceTest.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_DuplicatedGuidsBecomeCircularReferential.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_DuplicatedGuidsBecomeSelfReferential.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_MainWindow.xaml">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_PortableProject.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_ReferencesPortableProject.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_WithLink.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\EmptyLibrary.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\Encoding.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestLoad_SolutionFileWithEmptyLineBetweenProjectBlock.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_AnalyzerReference.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_CSharp.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_CSharp_EmptyLines.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_CSharp_UnknownProjectExtension.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_CSharp_UnknownProjectTypeGuid.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_CSharp_UnknownProjectTypeGuidAndUnknownExtension.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_CSharpProjectReference.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_DuplicatedGuids.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_DuplicatedGuidsBecomeCircularReferential.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_DuplicatedGuidsBecomeSelfReferential.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_InvalidProjectPath.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_MissingEndProject1.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_MissingEndProject2.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_MissingEndProject3.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_NonExistentProject.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_SolutionFolder.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\TestSolution_VB_and_CSharp.sln" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_Application.Designer.vb" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_Application.myapp" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_AssemblyInfo.vb" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_Circular_Target.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_Circular_Top.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_Resources.Designer.vb" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_Settings.Designer.vb" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicClass.vb" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicClass_WithConditionalAttributes.vb" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_3_5.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_AnalyzerReference.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_Embed.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_InvalidProjectReference.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_NonExistentProjectReference.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_UnknownProjectExtension.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_WithoutPrefer32Bit.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_WithoutVBTargetsImported.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\VisualBasicProject_VisualBasicProject_WithPrefer32Bit.vbproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_BadTasks.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_MsbuildError.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_BadElement.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_WithSystemNumerics.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\CSharpProject_CSharpProject_Wildcards.csproj">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Remove="Resources\*.cs" />
-    <Compile Remove="Resources\**\*.cs" />
+    <Compile Remove="Resources\**\*.*" />
   </ItemGroup>
 </Project>
