--- a/src/Workspaces/CoreTestUtilities/Resources/ProjectFiles/CSharp/WithoutPrefer32Bit.csproj
+++ b/src/Workspaces/CoreTestUtilities/Resources/ProjectFiles/CSharp/WithoutPrefer32Bit.csproj
@@ -6,6 +6,7 @@
     <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">AnyCPU</Platform>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
     <ProjectGuid>{9705A8E6-C854-4FD3-8CEA-EDBDD54C7FD8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
