--- a/src/Workspaces/CoreTestUtilities/Resources/ProjectFiles/VisualBasic/WithoutPrefer32Bit.vbproj
+++ b/src/Workspaces/CoreTestUtilities/Resources/ProjectFiles/VisualBasic/WithoutPrefer32Bit.vbproj
@@ -6,6 +6,7 @@
     <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">AnyCPU</Platform>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
     <ProjectGuid>{5D92B789-04AE-4B5C-A550-4E13378FA18F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <StartupObject>ConsoleApplication1.Module1</StartupObject>
