--- a/src/NuGet/Microsoft.CodeAnalysis.Workspaces.Common.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.Workspaces.Common.nuspec
@@ -22,10 +22,16 @@
         <dependency id="System.ObjectModel" version="$SystemObjectModelVersion$" />
         <dependency id="System.Text.RegularExpressions" version="$SystemTextRegularExpressionsVersion$" />
         <dependency id="System.Threading.Tasks.Parallel" version="$SystemThreadingTasksParallelVersion$" />
+        <dependency id="SQLitePCLRaw.bundle_green" version="$SQLitePCLRawbundle_greenVersion" />
+        <dependency id="Microsoft.Build" version="$MicrosoftBuildVersion" />
+        <dependency id="Microsoft.Build.Tasks.Core" version="$MicrosoftBuildTasksCoreVersion" />
       </group>
       <group targetFramework="net46">
         <dependency id="Microsoft.CodeAnalysis.Common" version="[$version$]" />
         <dependency id="System.Composition" version="$SystemCompositionVersion$" />
+        <dependency id="SQLitePCLRaw.bundle_green" version="$SQLitePCLRawbundle_greenVersion" />
+        <dependency id="Microsoft.Build" version="$MicrosoftBuildVersion" />
+        <dependency id="Microsoft.Build.Tasks.Core" version="$MicrosoftBuildTasksCoreVersion" />
       </group>
     </dependencies>
 
