--- a/src/NuGet/Microsoft.CodeAnalysis.CSharp.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.CSharp.nuspec
@@ -14,6 +14,7 @@
     </description>
     <dependencies>
       <dependency id="Microsoft.CodeAnalysis.Common" version="[$version$]" />
+      <dependency id="Humanizer.Core" version="$HumanizerCoreVersion$" />
     </dependencies>
 
     <language>en-US</language>
