Use test signing
The 15.6 branch still signs our SWIX projects using Microbuild directly,
not via SignTool. Hence we need to install the plugin as test signed
here while we are still in validation.

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -19,7 +19,7 @@ steps:
 
 - task: ms-vseng.MicroBuildTasks.30666190-6959-11e5-9f96-f56098202fef.MicroBuildSigningPlugin@1
   inputs:
-    signType: real
+    signType: test
     legacySigning: true
   condition: and(succeeded(), in(variables['PB_SignType'], 'test', 'real'))
 
