--- a/src/NuGet/NuGetProjectPackUtil.csproj
+++ b/src/NuGet/NuGetProjectPackUtil.csproj
@@ -21,6 +21,7 @@
 
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <DisableImplicitFrameworkReferences>false</DisableImplicitFrameworkReferences>
+    <OutputType>Library</OutputType>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <NuspecFile></NuspecFile>
     <NuspecProperties>$(NuspecProperties);version=$(_Version)</NuspecProperties>
