--- a/src/NuGet/Microsoft.CodeAnalysis.EditorFeatures.Text.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.EditorFeatures.Text.nuspec
@@ -14,13 +14,17 @@
       More details at https://aka.ms/roslyn-packages
 
       $commitPathMessage$
+      Microsoft.VisualStudio.CoreUtility: $MicrosoftVisualStudioCoreUtilityVersion$
     </description>
     <dependencies>
       <dependency id="Microsoft.CodeAnalysis.Workspaces.Common" version="[$version$]" />
-      <dependency id="Microsoft.VisualStudio.CoreUtility" version="$MicrosoftVisualStudioCoreUtilityVersion$" />
+      <!--This package depends on the following 4 packages, however we can not enforce them in there.
+      Roslyn depends on Editor packages which are not released yet, enforcing these dependenceis will delay the release of roslyn package,
+      while roslyn and editor packages are supposed to release together with Visual Studio.-->
+      <!--<dependency id="Microsoft.VisualStudio.CoreUtility" version="$MicrosoftVisualStudioCoreUtilityVersion$" />
       <dependency id="Microsoft.VisualStudio.Text.Data" version="$MicrosoftVisualStudioTextDataVersion$" />
       <dependency id="Microsoft.VisualStudio.Text.Logic" version="$MicrosoftVisualStudioTextLogicVersion$" />
-      <dependency id="Microsoft.VisualStudio.Utilities" version="$MicrosoftVisualStudioUtilitiesVersion$" />
+      <dependency id="Microsoft.VisualStudio.Utilities" version="$MicrosoftVisualStudioUtilitiesVersion$" />-->
     </dependencies>
 
     <language>en-US</language>
