--- a/src/NuGet/Microsoft.CodeAnalysis.EditorFeatures.nuspec
+++ b/src/NuGet/Microsoft.CodeAnalysis.EditorFeatures.nuspec
@@ -14,6 +14,7 @@
       More details at https://aka.ms/roslyn-packages
 
       $commitPathMessage$
+      This depends on Microsoft.VisualStudio.Text.UI version $MicrosoftVisualStudioTextUIVersion$ or higher
     </description>
     <dependencies>
       <dependency id="Microsoft.CodeAnalysis.Features" version="[$version$]" />
@@ -21,8 +22,11 @@
       <dependency id="Microsoft.VisualStudio.Language.StandardClassification" version="$MicrosoftVisualStudioLanguageStandardClassificationVersion$" />
       <dependency id="Microsoft.VisualStudio.Language.Intellisense" version="$MicrosoftVisualStudioLanguageIntellisenseVersion$" />
       <dependency id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="$MicrosoftVisualStudioImagingInterop140DesignTimeVersion$" />
-      <dependency id="Microsoft.VisualStudio.Text.UI" version="$MicrosoftVisualStudioTextUIVersion$" />
       <dependency id="ICSharpCode.Decompiler" version="$ICSharpCodeDecompilerVersion$" />
+      <!--This package depends on the following editor package, however we can not enforce them in there.
+      Roslyn depends on Editor packages which are not released yet, enforcing these dependenceis will delay the release of roslyn package,
+      while roslyn and editor packages are supposed to release together with Visual Studio.-->
+      <!--<dependency id="Microsoft.VisualStudio.Text.UI" version="$MicrosoftVisualStudioTextUIVersion$" />-->
     </dependencies>
 
     <language>en-US</language>
