Fix upload display name
The insertion tool relies on the display name of our upload task to be
"Upload VSTS Drop". The build definition to YAML definition omitted this
information and broke the insertion tool.

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -103,6 +103,7 @@ steps:
   condition: and(succeeded(), contains(variables['PB_PublishType'], 'vsts'))
 
 - task: ms-vseng.MicroBuildTasks.4305a8de-ba66-4d8b-b2d1-0dc4ecbbf5e8.MicroBuildUploadVstsDropFolder@1
+  displayName: Upload VSTS Drop
   inputs:
     DropFolder: 'Binaries\$(BuildConfiguration)\Insertion'
   condition: and(succeeded(), contains(variables['PB_PublishType'], 'vsts'))
