--- a/src/Tools/AnalyzerRunner/Properties/launchSettings.json
+++ b/src/Tools/AnalyzerRunner/Properties/launchSettings.json
@@ -2,35 +2,19 @@
   "profiles": {
     "CSharpEditorFeatures Analyzers": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.EditorFeatures.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /stats",
-      "environmentVariables": {
-        "VisualStudioVersion": "$(VisualStudioVersion)",
-        "VSToolsPath": "$(VSAPPIDDIR)..\\..\\MSBuild\\Microsoft\\VisualStudio\\v15.0"
-      }
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.EditorFeatures.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /stats"
     },
     "CSharpFeatures Analyzers": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.Features.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /concurrent /iter:4 /stats",
-      "environmentVariables": {
-        "VisualStudioVersion": "$(VisualStudioVersion)",
-        "VSToolsPath": "$(VSAPPIDDIR)..\\..\\MSBuild\\Microsoft\\VisualStudio\\v15.0"
-      }
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.Features.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /concurrent /iter:4 /stats"
     },
     "Microsoft.CodeQuality.CSharp.Analyzers Analyzers": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)..\\roslyn-analyzers\\artifacts\\Release\\bin\\Microsoft.CodeAnalysis.FxCopAnalyzers.Package\\netstandard1.3 $(SolutionDir)..\\Orchard\\src\\Orchard.sln /concurrent /iter:4 /stats",
-      "environmentVariables": {
-        "VisualStudioVersion": "$(VisualStudioVersion)",
-        "VSToolsPath": "$(VSAPPIDDIR)..\\..\\MSBuild\\Microsoft\\VisualStudio\\v15.0"
-      }
+      "commandLineArgs": "$(SolutionDir)..\\roslyn-analyzers\\artifacts\\Release\\bin\\Microsoft.CodeAnalysis.FxCopAnalyzers.Package\\netstandard1.3 $(SolutionDir)..\\Orchard\\src\\Orchard.sln /concurrent /iter:4 /stats"
     },
     "Profile CSharpSimplifyTypeNamesDiagnosticAnalyzer": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.Features.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /stats /a CSharpSimplifyTypeNamesDiagnosticAnalyzer /editperf:ContentQueryExtensions /edititer:300",
-      "environmentVariables": {
-        "VisualStudioVersion": "$(VisualStudioVersion)",
-        "VSToolsPath": "$(VSAPPIDDIR)..\\..\\MSBuild\\Microsoft\\VisualStudio\\v15.0"
-      }
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.Features.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /stats /a CSharpSimplifyTypeNamesDiagnosticAnalyzer /editperf:ContentQueryExtensions /edititer:300"
     }
   }
 }
