--- a/src/Tools/AnalyzerRunner/Properties/launchSettings.json
+++ b/src/Tools/AnalyzerRunner/Properties/launchSettings.json
@@ -1,12 +1,24 @@
 {
   "profiles": {
+    "IDE Analyzers": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner $(SolutionDir)Roslyn.sln /concurrent /stats"
+    },
     "CSharpEditorFeatures Analyzers": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.EditorFeatures.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /stats"
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.EditorFeatures.dll $(SolutionDir)Roslyn.sln /concurrent /stats"
     },
     "CSharpFeatures Analyzers": {
       "commandName": "Project",
-      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.Features.dll $(SolutionDir)..\\Orchard\\src\\Orchard.sln /concurrent /iter:4 /stats"
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.CSharp.Features.dll $(SolutionDir)Roslyn.sln /concurrent /stats"
+    },
+    "BasicEditorFeatures Analyzers": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.VisualBasic.EditorFeatures.dll $(SolutionDir)Roslyn.sln /concurrent /stats"
+    },
+    "BasicFeatures Analyzers": {
+      "commandName": "Project",
+      "commandLineArgs": "$(SolutionDir)Binaries\\$(Configuration)\\Exes\\AnalyzerRunner\\Microsoft.CodeAnalysis.VisualBasic.Features.dll $(SolutionDir)Roslyn.sln /concurrent /stats"
     },
     "Microsoft.CodeQuality.CSharp.Analyzers Analyzers": {
       "commandName": "Project",
