Enable gcServer in AnalyzerRunner to improve overall performance

--- a/src/Tools/AnalyzerRunner/app.config
+++ b/src/Tools/AnalyzerRunner/app.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <runtime>
+    <gcServer enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.CodeAnalysis" publicKeyToken="31bf3856ad364e35" culture="neutral" />
