Fix symbol indexing

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -79,18 +79,7 @@ steps:
   condition: succeededOrFailed()
 
 - task: PublishSymbols@1
-  inputs:
-    SymbolsPath: '$(DropRoot)\Roslyn-Signed\$(Build.SourceBranchName)\$(BuildConfiguration)\$(Build.BuildNumber)\Symbols'
-    SearchPattern: '*.dll;*.exe;*.pdb;Dlls\**\*.dll;Dlls\**\*.exe;Dlls\**\*.pdb;Exes\**\*.dll;Exes\**\*.exe;Exes\**\*.pdb;Vsix\**\*.dll;Vsix\**\*.exe;Vsix\**\*.pdb'
-    SymbolsFolder: '$(Build.SourcesDirectory)\Binaries\$(BuildConfiguration)'
-    SkipIndexing: true
-    TreatNotIndexedAsWarning: true
-    SymbolsProduct: Roslyn
-    SymbolsVersion: '$(Build.BuildNumber)'
-    SymbolsArtifactName: Symbols
-  condition: and(succeeded(), contains(variables['PB_PublishType'], 'vsts'))
-
-- task: PublishSymbols@1
+  displayName: Create Symbol Index
   inputs:
     SymbolsPath: '$(DropRoot)\Roslyn-Signed\$(Build.SourceBranchName)\$(BuildConfiguration)\$(Build.BuildNumber)\Symbols'
     SearchPattern: '**\*.dll;**\*.exe;**\*.pdb'
@@ -103,12 +92,14 @@ steps:
   condition: and(succeeded(), contains(variables['PB_PublishType'], 'vsts'))
 
 - task: CopyFiles@2
+  displayName: Copy Files to Local Temporary Path
   inputs:
     SourceFolder: '$(DropRoot)\Roslyn-Signed\$(Build.SourceBranchName)\$(BuildConfiguration)\$(Build.BuildNumber)\Symbols'
     TargetFolder: '$(Build.StagingDirectory)\SymbolsForPublish'
   condition: and(succeeded(), contains(variables['PB_PublishType'], 'vsts'))
 
 - task: ms-vscs-artifact.build-tasks.artifactSymbolTask-1.artifactSymbolTask@0
+  displayName: Publish Symbols to Artifact Services
   inputs:
     symbolServiceURI: 'https://microsoft.artifacts.visualstudio.com/DefaultCollection'
     requestName: '$(system.teamProject)/Roslyn-Signed/$(Build.BuildNumber)/$(Build.BuildId)'
@@ -124,6 +115,7 @@ steps:
   condition: and(succeeded(), contains(variables['PB_PublishType'], 'vsts'))
 
 - task: NuGetCommand@2
+  displayName: NuGet CoreXT publish
   inputs:
     command: push
     feedsToUse: config
@@ -133,6 +125,7 @@ steps:
   condition: and(succeeded(), contains(variables['PB_PublishType'], 'vsts'))
 
 - task: PublishBuildArtifacts@1
+  displayName: Publish Drop (parallel)
   inputs:
     PathtoPublish: 'Binaries\$(BuildConfiguration)'
     ArtifactName: '$(Build.BuildNumber)'
@@ -142,9 +135,11 @@ steps:
     ParallelCount: 64
 
 - task: ms-vseng.MicroBuildTasks.521a94ea-9e68-468a-8167-6dcf361ea776.MicroBuildCleanup@1
+  displayName: Perform Cleanup Tasks
   condition: succeededOrFailed()
 
 - task: PublishBuildArtifacts@1
+  displayName: Publish MicroBuild Outputs
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)\MicroBuild\Output'
     ArtifactName: '$(Build.BuildNumber)'
